@@ -1,1 +1,4 @@
 Mike Lampard <mlampard@users.sf.net>
+
+Antonio Bartolini <robynhub@gmail.com>
+- patch for relative scaling of net graph.
